# core-term

./: .clippy.toml  .gitattributes  .gitignore  .mcp.json  BENCHMARK_REPORT.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PIXELFLOW_IR_STATUS.md  README.md  REFACTORING_AGGRESSIVE_SUMMARY.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  STYLE.md  TEST_COVERAGE_ANALYSIS.md  build.rs  build_errors.txt  check_graphics.txt  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  check_output_7.txt  check_output_8.txt  check_output_final.txt  clippy2.txt  clippy_output.txt  clippy_output_2.txt  clippy_output_3.txt  core_benches_out.txt  create_bundle.sh  delete_empty_tests.py  fix_cache.sh  fix_clippy.py  (+49 more)
actor-scheduler/: Cargo.toml  QA_REPORT.md  README.md
actor-scheduler/benches/: bench_adversarial.rs  bench_kubelet.rs  bench_latency.rs  bench_optimize.rs  bench_optimize_spsc.rs  bench_spsc_vs_mpsc.rs  bench_throughput.rs
actor-scheduler/examples/: work_pool_demo.rs
actor-scheduler/src/: error.rs  kubelet.rs  lib.rs  lifecycle.rs  mpmc_ring.rs  params.rs  registry.rs  service.rs  sharded.rs  spsc.rs  work_pool.rs
actor-scheduler/tests/: generic_type.rs  qa_adversarial.rs  simple_type.rs  stress_tests.rs
code-index/: Cargo.toml
code-index/src/: config.rs  download.rs  embed.rs  install.rs  main.rs  parse.rs  store.rs  tools.rs  vdb.rs
core-term/: Cargo.toml  build.rs
core-term/benches/: ansi_parser.rs  keybinding_benchmark.rs
core-term/src/: app.rs  color.rs  config.rs  glyph.rs  keys.rs  lib.rs  main.rs  messages.rs  pixels.rs  terminal_app.rs
core-term/tests/: actor_roundtrip_tests.rs  ansi_parser_message_tests.rs  ansi_to_grid_integration.rs  end_to_end.rs  engine_app_message_tests.rs  message_cuj_tests.rs  osc_protocol_tests.rs  terminal_app_tdd_tests.rs
examples/image-viewer/: Cargo.toml
examples/shapes/: Cargo.toml
pixelflow-core/: Cargo.toml  README.md  build.rs
pixelflow-core/benches/: core_bench.rs  core_benches.rs  trig_bench.rs
pixelflow-core/docs/: SHADER_ALGEBRA.md
pixelflow-core/examples/: asm_check.rs  assembly_proof.rs  fma_test.rs  gather_demo.rs  select_asm.rs  tensor_resize.rs  type_driven_api.rs  type_driven_api.rs.disabled  type_inference.rs
pixelflow-core/fuzz/: Cargo.toml
pixelflow-core/src/: algebra.rs  backend.rs  batch.rs  bf16.rs  bitwise.rs  curve.rs  derivative_markers.rs  diff.rs  domain.rs  downcast.rs  dsl.rs  dual.rs  egraph.rs  ext.rs  fractals.rs  generated_kernels.rs  jet.rs  lib.rs  manifold.rs  mask.rs  numeric.rs  ops.rs  packing.rs  param_wrapper.rs  pipe.rs  pixel.rs  platform.rs  raster.rs  sequential.rs  simd.rs  storage.rs  traits.rs  variables.rs  vector.rs  zst.rs
pixelflow-core/tests/: algebra_mutants.rs  batch_ops_tests.rs  batch_tests.rs  cast_vs_convert.rs  collapse.rs  eigenshaders.rs  field_tests.rs  issue_sample_atlas_coords.rs  pipeline_extended_tests.rs  pipeline_tests.rs  platform_test.rs  reference.rs  regression_write_overrun.rs  robustness_tests.rs  sampling_bounds.rs  simd_safety.rs  spherical_harmonics_test.rs  surface_tests.rs  tensor_ops_tests.rs  tensor_tests.rs  test_context_tuple.rs  test_curve.rs  test_jet2.rs  test_jet2h.rs  test_jet_sqrt_correctness.rs  test_kernel_5params.rs  test_log2.rs  test_ops.rs  test_robustness.rs  test_sphere_debug.rs  test_spherical_harmonics.rs  test_trig_robustness.rs  trig_accuracy.rs  trig_tests.rs  unit_tests.rs  vector_tests.rs  x86_backend_tests.rs
pixelflow-engine/: Cargo.toml  build.rs
pixelflow-engine/src/: channel.rs  config.rs  frame.rs  input.rs  lib.rs  render_pool.rs  traits.rs  vsync_actor.rs
pixelflow-fonts/: Cargo.toml  README.md
pixelflow-fonts/benches/: fonts_bench.rs
pixelflow-fonts/src/: atlas.rs  baked.rs  combinators.rs  curves.rs  font.rs  glyph.rs  lazy.rs  lib.rs  memoize.rs  rasterizer.rs  surface.rs  tests.rs
pixelflow-fonts/tests/: integration.rs
pixelflow-graphics/: Cargo.toml  README.md  lib.d
pixelflow-graphics/benches/: color_bench.rs  font_deathmatch.rs  font_rendering.rs  graphics_benches.rs  kernel_bench.rs  loop_blinn_comparison.rs  rasterizer_throughput.rs
pixelflow-graphics/examples/: chrome_asm.rs  circle_asm.rs  compose_test.rs  kernel_asm.rs  kernel_scale_test.rs  kernel_scene3d.rs  quad_asm.rs  render_face.rs  subdivision_autodiff.rs
pixelflow-graphics/src/: animation.rs  baked.rs  image.rs  lib.rs  lighting.rs  mesh.rs  patch.rs  primitives.rs  raymarch.rs  scene3d.rs  shapes.rs  spatial_bsp.rs  subdivision.rs  transform.rs
pixelflow-graphics/tests/: color_palette_test.rs  debug_font.rs  debug_glyph_coords.rs  e2e_render_to_file.rs  font_orientation_test.rs  font_rasterization_regression.rs  font_stdout_demo.rs  kernel_macro.rs  mutant_test.rs  optimization_fuzz.proptest-regressions  optimization_fuzz.rs  path_jet_sphere_test.rs  pixel_contract.rs  raster_parallel.rs  rasterizer_parallel_test.rs  rasterizer_subpixel_precision.rs  raymarch_classic.rs  raymarch_sphere.rs  render_glyph.rs  rendering_contract.rs  scene3d_mutants.rs  scene3d_test.rs  scene3d_unit_test.rs  sphere_reflection_test.rs  surface_logic_test.rs  wide_character_edge_test.rs
pixelflow-macros/: Cargo.toml
pixelflow-macros/benches/: macro_bench.rs
pixelflow-macros/src/: annotate.rs  ast.rs  codegen.rs  cost_builder.rs  egraph.rs  element.rs  fold.rs  ir_bridge.rs  lexer.rs  lib.rs  manifold_expr.rs  optimize.rs  parser.rs  rewrite_rules.rs  sema.rs  symbol.rs
pixelflow-ml/: Cargo.toml
pixelflow-ml/benches/: expr_perf.rs  generated_kernels.rs  hce_bench.rs  manifold_hce_validation.rs  nnue_training_suite.rs
pixelflow-ml/data/: benchmark_cache.jsonl  bwd_training_pairs.txt  egraph_variants.txt  generated_exprs.txt  (+1 more)
pixelflow-nnue/: Cargo.toml  README.md
pixelflow-pipeline/: Cargo.toml  NNUE_TRAINING.md
pixelflow-render/: Cargo.toml  README.md  build.rs
pixelflow-runtime/: Cargo.toml  build.rs
pixelflow-search/: Cargo.toml  README.md
web-demo/: Cargo.toml  build.sh  index.html
(+817 files in other folders)
