[workspace]
members = [".", "xtask"]

[package]
name = "core-term"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bitflags = { version = "2.9.0", features = ["serde"] }
env_logger = "0.11.8"
once_cell = "1.19.0" # Added for Lazy static initialization
libc = "0.2.172"
log = "0.4.27"
nix = { version = "0.30.0", features = ["term", "process", "fs", "ioctl", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
termios = "0.3.3"
pprof = { version = "0.14", features = ["flamegraph", "criterion"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Old cocoa/objc for existing platform/backends/cocoa.rs (to be removed)
cocoa = "0.26"
objc = "0.2"
# New objc2 for display/drivers/cocoa.rs
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSDate", "NSAutoreleasePool", "NSGeometry", "NSRunLoop"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSView", "NSEvent", "NSColor", "NSPasteboard"] }
core-foundation = "0.9"
core-graphics = "0.24"
core-text = "20.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
x11 = "2.21.0"
yeslogic-fontconfig-sys = "6.0.0"

[build-dependencies]
pkg-config = "0.3.32"

[dev-dependencies]
test-log = "0.2.17"
rexpect = "0.6.1"

[features]
default = []
profiling = ["pprof"]

