[package]
name = "actor-scheduler"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
actor-scheduler-macros = { path = "../actor-scheduler-macros" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_latency"
harness = false

[[bench]]
name = "bench_throughput"
harness = false

[[bench]]
name = "bench_adversarial"
harness = false

[[bench]]
name = "bench_optimize"
harness = false

[[bench]]
name = "bench_spsc_vs_mpsc"
harness = false
