[package]
name = "code-index"
version = "0.1.0"
edition = "2021"
description = "Language-agnostic semantic code search MCP server"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "3", features = ["rustls"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23.3"
tree-sitter-python = "0.23.6"
streaming-iterator = "0.1"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ndarray = "0.16"

[[bin]]
name = "code-index"
path = "src/main.rs"
