[package]
name = "core-term"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bitflags = { version = "2.9.0", features = ["serde"] }
env_logger = "0.11.8"
once_cell = "1.19.0"
libc = "0.2.172"
log = "0.4.27"
nix = { version = "0.30.0", features = ["term", "process", "fs", "ioctl", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
termios = "0.3.3"
pprof = { version = "0.14", features = ["flamegraph", "criterion"], optional = true }

[dependencies.pixelflow-core]
path = "../pixelflow-core"

[dependencies.pixelflow-render]
path = "../pixelflow-render"
features = ["serde"]

[dependencies.pixelflow-fonts]
path = "../pixelflow-fonts"

# Platform-specific display driver selection
[target.'cfg(target_os = "macos")'.dependencies.pixelflow-engine]
path = "../pixelflow-engine"
default-features = false
features = ["display_cocoa"]

[target.'cfg(target_os = "linux")'.dependencies.pixelflow-engine]
path = "../pixelflow-engine"
default-features = false
features = ["display_x11"]

[target.'cfg(target_os = "windows")'.dependencies.pixelflow-engine]
path = "../pixelflow-engine"
default-features = false
# TODO: Add display_win32 when implemented

[build-dependencies]
pkg-config = "0.3.32"

[dev-dependencies]
test-log = "0.2.17"
rexpect = "0.6.1"

[features]
# Manual override features (optional - platform auto-detects)
display_cocoa = ["pixelflow-engine/display_cocoa"]
display_x11 = ["pixelflow-engine/display_x11"]
display_headless = ["pixelflow-engine/display_headless"]
default = []
profiling = ["pprof"]
