[package]
name = "pixelflow-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
bench = false

[features]
default = []
# Enable std for benchmarking (interp module timing)
std = []
# Disable kernel! macro optimization - for training the cost model
no_optimize = ["pixelflow-macros/no_optimize"]

[dependencies]
pixelflow-macros = { path = "../pixelflow-macros" }

# libm only needed for scalar fallback (non-x86_64, non-aarch64)
[target.'cfg(not(any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
libm = "0.2.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_benches"
harness = false
