[package]
name = "pixelflow-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
pixelflow-ir = { path = "../pixelflow-ir" }
pixelflow-compiler = { path = "../pixelflow-compiler" }

# libm only needed for scalar fallback (non-x86_64, non-aarch64)
[target.'cfg(not(any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
libm = "0.2.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_benches"
harness = false
