[package]
name = "pixelflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bitflags = { version = "2.9.0", features = ["serde"] }
env_logger = "0.11.8"
libc = "0.2.172"
log = "0.4.27"
once_cell = "1.19.0"
serde = { version = "1.0.219", features = ["derive"] }

# Rendering library
[dependencies.pixelflow-render]
path = "../pixelflow-render"
features = ["serde"]

[dependencies.pixelflow-core]
path = "../pixelflow-core"

# Display driver dependencies - feature-gated for flexibility
[dependencies.objc2]
version = "0.6"
optional = true

[dependencies.objc2-foundation]
version = "0.3"
features = ["NSString", "NSDate", "NSAutoreleasePool", "NSGeometry", "NSRunLoop"]
optional = true

[dependencies.objc2-app-kit]
version = "0.3"
features = ["NSApplication", "NSWindow", "NSView", "NSEvent", "NSColor", "NSPasteboard"]
optional = true

[dependencies.core-foundation]
version = "0.9"
optional = true

[dependencies.core-graphics]
version = "0.24"
optional = true

[dependencies.core-text]
version = "20.1"
optional = true

[dependencies.x11]
version = "2.21.0"
optional = true

[dependencies.yeslogic-fontconfig-sys]
version = "6.0.0"
optional = true

[dependencies.freetype]
version = "0.7"
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[build-dependencies]
pkg-config = "0.3.32"

[features]
display_cocoa = [
    "objc2",
    "objc2-foundation",
    "objc2-app-kit",
    "core-foundation",
    "core-graphics",
    "core-text",
    "pixelflow-render/fonts",
]
display_x11 = [
    "x11",
    "yeslogic-fontconfig-sys",
    "freetype",
    "core-foundation",
    "core-graphics",
    "core-text",
    "pixelflow-render/fonts",
]
display_headless = [
    "pixelflow-render/fonts",
]

default = ["display_cocoa"]
