[package]
name = "pixelflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bitflags = { version = "2.9.0", features = ["serde"] }
env_logger = "0.11.8"
libc = "0.2.172"
log = "0.4.27"
once_cell = "1.19.0"
serde = { version = "1.0.219", features = ["derive"] }

# Rendering library
[dependencies.pixelflow-render]
path = "../pixelflow-render"
features = ["serde"]

[dependencies.pixelflow-core]
path = "../pixelflow-core"

[dependencies.actor-scheduler]
path = "../actor-scheduler"

# Display driver dependencies - feature-gated for flexibility
[dependencies.objc2]
version = "0.6"
optional = true

[dependencies.objc2-foundation]
version = "0.3"
features = ["NSString", "NSDate", "NSAutoreleasePool", "NSGeometry", "NSRunLoop"]
optional = true

[dependencies.objc2-app-kit]
version = "0.3"
features = ["NSApplication", "NSWindow", "NSView", "NSEvent", "NSColor", "NSPasteboard"]
optional = true

[dependencies.core-foundation]
version = "0.9"
optional = true

[dependencies.core-graphics]
version = "0.24"
optional = true

[dependencies.x11]
version = "2.21.0"
optional = true

# Platform-specific dependencies for auto-detection when no feature is specified
# These ensure the right display driver compiles on each platform by default
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSDate", "NSAutoreleasePool", "NSGeometry", "NSRunLoop"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSView", "NSEvent", "NSColor", "NSPasteboard"] }
core-foundation = "0.9"
core-graphics = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"
bincode = "1.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.69"
features = [
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "ImageData",
    "Window",
    "Worker",
    "console",
    "Performance",
]

[build-dependencies]
pkg-config = "0.3.32"


[features]
display_cocoa = [
    "objc2",
    "objc2-foundation",
    "objc2-app-kit",
    "core-foundation",
    "core-graphics",
]
display_x11 = [
    "x11",
]
display_headless = []
display_web = []

# No default - let the consuming crate pick based on platform
default = []
