[package]
name = "pixelflow-fonts"
version = "0.1.0"
edition = "2021"

[dependencies]
pixelflow-core = { path = "../pixelflow-core" }
ttf-parser = "0.21"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fonts_bench"
harness = false
