[package]
name = "pixelflow-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
bitflags = "2.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }

# SIMD library for optimized rendering
pixelflow-core = { path = "../pixelflow-core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
freetype-rs = "0.32"

[[bench]]
name = "graphics_benches"
harness = false

[[bench]]
name = "font_deathmatch"
harness = false

[features]
default = []
serde = ["dep:serde"]
