[package]
name = "pixelflow-graphics"
version = "0.1.0"
edition = "2021"

# [lib] bench = false removed

[dependencies]
# Core dependencies
bitflags = "2.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }

# SIMD library for optimized rendering
pixelflow-core = { path = "../pixelflow-core" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory", "Win32_Foundation"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
freetype-rs = "0.32"
tempfile = "3.10"

[[bench]]
name = "graphics_benches"
harness = false

[[bench]]
name = "font_deathmatch"
harness = false

[features]
default = []
serde = ["dep:serde"]
