[package]
name = "pixelflow-ml"
version = "0.1.0"
edition = "2024"
description = "Neural networks for graphics and compiler optimization"

[lints]
workspace = true

[lib]
bench = false

[features]
default = ["graphics"]
# Enable std for benchmarking and training data generation
std = []
# Enable training data generation (implies std)
training = ["std"]
# Enable graphics integration (harmonic attention, SH features) - requires pixelflow-core
graphics = ["dep:pixelflow-core"]
# Enable e-graph training examples - requires pixelflow-search and pixelflow-nnue
egraph-training = ["std", "dep:pixelflow-search", "dep:pixelflow-nnue", "dep:serde", "dep:serde_json"]

[dependencies]
pixelflow-core = { path = "../pixelflow-core", optional = true }
pixelflow-search = { path = "../pixelflow-search", optional = true }
pixelflow-nnue = { path = "../pixelflow-nnue", optional = true }
pixelflow-ir = { path = "../pixelflow-ir", default-features = false }
libm = "0.2.15"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"
pixelflow-core = { path = "../pixelflow-core" }
pixelflow-macros = { path = "../pixelflow-macros" }

[[bench]]
name = "hce_bench"
harness = false

[[bench]]
name = "expr_perf"
harness = false

[[bench]]
name = "manifold_hce_validation"
harness = false

[[bench]]
name = "nnue_training_suite"
harness = false

[[bench]]
name = "generated_kernels"
harness = false

[[example]]
name = "nnue_train_test"
required-features = ["training"]

[[example]]
name = "critical_path_test"
required-features = ["training"]

[[example]]
name = "guided_training"
required-features = ["egraph-training"]

[[example]]
name = "gen_egraph_variants"
required-features = ["egraph-training"]

[[example]]
name = "train_factored"
required-features = ["egraph-training"]

[[example]]
name = "learn_hce"
required-features = ["egraph-training"]
