[package]
name = "pixelflow-ml"
version = "0.1.0"
edition = "2024"
description = "Neural networks for graphics and compiler optimization"

[lints]
workspace = true

[lib]
bench = false

[features]
default = ["graphics"]
# Enable graphics integration (harmonic attention, SH features) - requires pixelflow-core
graphics = ["dep:pixelflow-core"]

[dependencies]
pixelflow-core = { path = "../pixelflow-core", optional = true }
libm = "0.2.15"

[dev-dependencies]
criterion = "0.5"
pixelflow-core = { path = "../pixelflow-core" }
pixelflow-compiler = { path = "../pixelflow-compiler" }