[package]
name = "pixelflow-pipeline"
version = "0.1.0"
edition = "2024"
description = "Training and data generation pipeline for PixelFlow"

[features]
default = []
training = ["pixelflow-search/std"]

[dependencies]
pixelflow-ir = { path = "../pixelflow-ir", features = ["alloc"] }
pixelflow-search = { path = "../pixelflow-search", features = ["std", "nnue"] }
pixelflow-core = { path = "../pixelflow-core" }
pixelflow-compiler = { path = "../pixelflow-compiler" }
libm = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"

[dev-dependencies]
criterion = "0.5"
pixelflow-compiler = { path = "../pixelflow-compiler" }

[[bench]]
name = "nnue_training_suite"
harness = false


[[bin]]
name = "eval_search"
path = "src/bin/eval_search.rs"

[[bin]]
name = "demo_rewrites"
path = "src/bin/demo_rewrites.rs"

[[bin]]
name = "demo_discovery"
path = "src/bin/demo_discovery.rs"

[[bin]]
name = "demo_nnue"
path = "src/bin/demo_nnue.rs"


[[bin]]
name = "bench_jit_corpus"
path = "src/bin/bench_jit_corpus.rs"
required-features = ["training"]

[[bin]]
name = "bench_judge_fair"
path = "src/bin/bench_judge_fair.rs"
required-features = ["training"]

[[bin]]
name = "bench_shader_e2e"
path = "src/bin/bench_shader_e2e.rs"
required-features = ["training"]

[[bin]]
name = "bootstrap_judge"
path = "src/bin/bootstrap_judge.rs"
required-features = ["training"]

[[bin]]
name = "gen_bench_corpus"
path = "src/bin/gen_bench_corpus.rs"
required-features = ["training"]

[[bin]]
name = "train_unified"
path = "src/bin/train_unified.rs"
required-features = ["training"]

