[package]
name = "pixelflow-render"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
bitflags = "2.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }

# SIMD library for optimized rendering
pixelflow-core = { path = "../pixelflow-core" }

# Font rendering - CoreText (macOS)
[dependencies.core-text]
version = "20.1"
optional = true

[dependencies.core-graphics]
version = "0.24"
optional = true

[dependencies.core-foundation]
version = "0.9"
optional = true

# Font rendering - FreeType (Linux/X11)
[dependencies.freetype]
version = "0.7"
optional = true

[dependencies.yeslogic-fontconfig-sys]
version = "6.0.0"
optional = true

[build-dependencies]
fontdue = "0.9"

[features]
# Font backend features
font_coretext = ["core-text", "core-graphics", "core-foundation"]
font_freetype = ["freetype", "yeslogic-fontconfig-sys"]
fonts = []

# Default: use pre-baked fonts
default = ["fonts"]
