[package]
name = "pixelflow-render"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
bitflags = "2.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }

# SIMD library for optimized rendering
pixelflow-core = { path = "../pixelflow-core" }

# Font rendering library
pixelflow-fonts = { path = "../pixelflow-fonts" }

[features]
default = ["fonts"]
fonts = []

