[package]
name = "pixelflow-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
thiserror = "1.0"
once_cell = "1.19"
bitflags = { version = "2.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }

# Workspace dependencies
pixelflow-core = { path = "../pixelflow-core" }
pixelflow-graphics = { path = "../pixelflow-graphics", features = ["serde"] }

[dependencies.actor-scheduler]
path = "../actor-scheduler"

# Display driver dependencies - feature-gated for flexibility

[dependencies.x11]
version = "2.21.0"
optional = true

# Platform-specific dependencies for auto-detection when no feature is specified
# These ensure the right display driver compiles on each platform by default
[target.'cfg(target_os = "macos")'.dependencies]
# Removed objc2 dependencies. Using manual bindings.
# core-foundation = "0.9" # Not used directly?
# core-graphics = "0.24" # Not used directly?

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"
bincode = "1.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.69"
features = [
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "ImageData",
    "Window",
    "Worker",
    "console",
    "Performance",
]

[build-dependencies]
pkg-config = "0.3.32"


[features]
display_cocoa = []
display_x11 = [
    "x11",
]
display_headless = []
display_web = []

# No default - let the consuming crate pick based on platform
default = []
