[package]
name = "pixelflow-search"
version = "0.1.0"
edition = "2024"
description = "A generic graph search framework for algebraic optimization and scheduling"

[dependencies]
libm = "0.2.15"
rand = "0.8" # Optional, for training/search randomization
pixelflow-nnue = { path = "../pixelflow-nnue", default-features = false }

[features]
std = ["rand/std", "pixelflow-nnue/std"]
default = ["std"]
training = ["std"]

[[example]]
name = "egraph_training"
required-features = ["std"]

[[example]]
name = "train_cost_weights"
required-features = ["std"]

[[example]]
name = "cost_weight_optimizer"
required-features = ["std"]
