[package]
name = "shapes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shapes"
path = "src/main.rs"

[dependencies]
pixelflow-core = { path = "../../pixelflow-core" }
pixelflow-render = { path = "../../pixelflow-render" }
pixelflow-engine = { path = "../../pixelflow-engine" }
actor-scheduler = { path = "../../actor-scheduler" }

anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
